change configmap access - remove needed perms

--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -10,7 +10,12 @@ spec:
               cpu: 100m
               memory: 200Mi
           env:
-            - name: APP_CONFIGMAP_NAME
-              value: project-service
-            - name: APP_CONFIGMAP_KEY
-              value: app-config.yml
+            - name: DEPLOYMENT_PATH
+              value: /deployments/config/app-config.yml
+          volumeMounts:
+            - name: config
+              mountPath: /deployments/config/
+      volumes:
+        - configMap:
+            name: project-service
+          name: config
